--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,23 @@
-spring.datasource.url=jdbc:h2:mem:uni-db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/uni-db?\
+  createDatabaseIfNotExist=true&\
+  allowPublicKeyRetrieval=true&\
+  autoReconnect=true&\
+  useSSL=false&\
+  useUnicode=true&\
+  characterEncoding=UTF-8&\
+  serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
 
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+
+spring.flyway.enabled=true
+spring.flyway.url = jdbc:mysql://localhost:3306/uni-db
+spring.flyway.user = root
+spring.flyway.password = 1234
+
