--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,8 @@
 version: "3.8"
 
 services:
-  mysqldb:
-    image: mysql:8.0.0
-    environment:
-      - MYSQL_ROOT_PASSWORD=1234
-      - MYSQL_DATABASE=uni-db
-    ports:
-      - 3306:3306
-    healthcheck:
-      test: "mysql -uroot -p1234 uni-db -e 'select 1'"
-      interval: 5s
-      timeout: 1s
-      retries: 120
-
-  dcs-api:
-    depends_on:
-      mysqldb:
-        condition: service_healthy
-    restart: on-failure
+  uni-service:
     image: delef/uni-service-api
     build: .
     ports:
       - 8080:8080
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysqldb:3306/uni-db?useSSL=false
-      SPRING_FLYWAY_URL: jdbc:mysql://mysqldb:3306/uni-db?useSSL=false
